[package]
authors = ["Cobrand <cobrandw@gmail.com>"]
name = "reliudp"
version = "0.3.0"
edition = "2018"

description = "A custom Reliable UDP protocol for Rust"
license = "MIT"

keywords = ["udp", "networking", "multiplayer"]
categories = ["network-programming"]
repository = "https://github.com/Cobrand/reliudp"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.48", features = ["Win32_Networking_WinSock", "Win32_Foundation", "Win32_System_IO"]}

[dependencies]
byteorder = "1.4"
crc32fast = "1"
hashbrown = "0.11.1"
itertools = "0.10.0"
hex = { version = "0.4.3", optional = true }
log = "0.4.14"

[features]
default = []
extended_debug = ["hex"]